<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:background="@drawable/search_et_sharp"
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/question"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">
        <Spinner
            android:background="@drawable/search_spinner_sharp"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/plantes"
            android:layout_marginRight="20dp"/>

        <Button
            style="@style/buttons"
            android:id="@+id/paste"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:text="@string/paste"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/search"
            android:layout_width="65dp"
            android:layout_height="35dp"
            style="@style/buttons"
            android:layout_marginRight="5dp"
            android:text="@string/search"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="65dp"
            android:layout_height="35dp"
            style="@style/buttons"
            android:text="@string/clear"
            android:textColor="@color/white"/>
    </LinearLayout>
    <Button
        android:id="@+id/main_start_btn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/main_start_btn"
        android:layout_marginBottom="15dp"
        style="@style/buttons"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:background="@drawable/search_text_sharp"
                android:id="@+id/answer"
                android:layout_width="359dp"
                android:layout_height="235dp"
                android:text="@string/answer"
                android:textColor="#F56"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>

    <!--  底部信息  -->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textIsSelectable="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/bottom"
            android:gravity="center"/>
    </LinearLayout>




    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>