<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_boder"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="学了吗"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <LinearLayout
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/main_about"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="关于"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--第一排-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context="com.zmide.MainActivity">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="@drawable/main_item_touch_bg"
                    card_view:cardBackgroundColor="@color/cardBackgroundColor"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/card1"
                        android:textSize="20dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="@drawable/main_item_touch_bg"
                        card_view:cardBackgroundColor="@color/cardBackgroundColor"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/card2"
                            android:textSize="20dp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <!--第二排-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context="com.zmide.MainActivity">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="@drawable/main_item_touch_bg"
                    card_view:cardBackgroundColor="@color/cardBackgroundColor"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/card3"
                        android:textSize="20dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="@drawable/main_item_touch_bg"
                        card_view:cardBackgroundColor="@color/cardBackgroundColor"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/card4"
                            android:textSize="20dp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <!--第三排-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context="com.zmide.MainActivity">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card5"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="@drawable/main_item_touch_bg"
                    card_view:cardBackgroundColor="@color/cardBackgroundColor"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/card5"
                        android:textSize="20dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card6"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="@drawable/main_item_touch_bg"
                        card_view:cardBackgroundColor="@color/cardBackgroundColor"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/card6"
                            android:textSize="20dp"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <!--第四排-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context="com.zmide.MainActivity">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="@drawable/main_item_touch_bg"
                    card_view:cardBackgroundColor="@color/cardBackgroundColor"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/card7"
                        android:textSize="20dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card8"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="@drawable/main_item_touch_bg"
                        card_view:cardBackgroundColor="@color/cardBackgroundColor"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/card8"
                            android:textSize="20dp"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <!--第五排-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context="com.zmide.MainActivity">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card9"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="@drawable/main_item_touch_bg"
                    card_view:cardBackgroundColor="@color/cardBackgroundColor"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/card9"
                        android:textSize="20dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card10"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        android:foreground="@drawable/main_item_touch_bg"
                        card_view:cardBackgroundColor="@color/cardBackgroundColor"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/card10"
                            android:textSize="20dp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</LinearLayout>






